--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A flutter assignment from Chinmay Phadke of Cambridge Wealth
 
 publish_to: 'none'
 
-version: 1.0.2+3
+version: 1.0.3+4
 
 environment:
   sdk: '>=2.18.5 <3.0.0'
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   sizer:
+  flutter_bloc:
+  equatable:
 
 dev_dependencies:
   flutter_test:
