--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A flutter assignment from Chinmay Phadke of Cambridge Wealth
 
 publish_to: 'none'
 
-version: 1.0.3+4
+version: 1.0.4+5
 
 environment:
   sdk: '>=2.18.5 <3.0.0'
@@ -15,6 +15,7 @@ dependencies:
   sizer:
   flutter_bloc:
   equatable:
+  google_fonts:
 
 dev_dependencies:
   flutter_test:
